cleaned up more spacing issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -78,20 +78,13 @@ h3 {
 }
 
 .card {
+    width: 100%;
     border: solid;
     border-width: .5px;
     border-color: lightgrey;
     border-radius: .5em;
     margin: 0 auto 10px auto;
     text-align: center;
-}
-
-.card:nth-of-type(1) {
-    width: 100%;
-}
-
-.card:nth-of-type(2) {
-    width: 100%;
 }
 
 img {
@@ -108,6 +101,10 @@ li {
     margin: .5em;
     padding: 0;
     text-align: left;
+}
+
+iframe {
+    grid-column: 1/2;
 }
 
 #menubutton {
