--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,6 +12,10 @@
         grid-column: 1/3;
     }
 
+    iframe {
+        grid-column: 1/3;
+    }
+
     #menubutton {
         display: none;
     }
